“第三次修改”

--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -1,1 +1,24 @@
+### 1、链表：
+
+&nbsp;&nbsp;顺序存储结构
+
+&nbsp;&nbsp;单链表
+
+&nbsp;&nbsp;静态链表
+
+&nbsp;&nbsp;循环链表
+
+&nbsp;&nbsp;双向链表
+
+
+
+&nbsp;
+
+&nbsp;
+
+&nbsp;
+
+
+
 ### CORDIC算法原理-圆坐标系旋转原理
+
