“第二次修改”

--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -1,14 +1,36 @@
-### 1、链表：
+### 1、链表
 
-&nbsp;&nbsp;顺序存储结构
+* 顺序存储结构
+* 单链表
+* 静态链表
+* 循环链表
+* 双向链表
 
-&nbsp;&nbsp;单链表
+### 2、栈与队列
 
-&nbsp;&nbsp;静态链表
+二者都是特殊的线性表
 
-&nbsp;&nbsp;循环链表
+* **栈**（仅在表尾进行插入和删除操作）：
 
-&nbsp;&nbsp;双向链表
+  ​	栈的顺序存储结构、两栈共享空间
+
+  ​	栈的链式存储结构（链栈）
+
+  *应用*：递归函数（斐波那契数列）、四则运算表达式求值（后缀表达式）
+
+* **队列**（只允许在一端插入，另一端删除）：
+
+​				队列的顺序存储结构
+
+​				循环队列的顺序存储结构
+
+​				队列的链式存储结构
+
+### 3、串
+
+
+
+
 
 
 
