--- a/666.md
+++ b/666.md
@@ -30,6 +30,34 @@
 
 
 
+### 总结：
+
+**研究现状：**
+
+​		CMC是一种水溶性多糖，由于其易交联能力、生物相容性和可生物降解性，是一种常用的凝胶聚合物，可用于多种应用(Bagheri, Mansour Lakouraj, Hasantabar， & Mohseni, 2021;Nascimento等，2018;Shen, Shamshina, Berton, Gurau， & Rogers, 2016;王，贾，刘，林，2021)。
+
+​		CMC的大量羧基阴离子(-COO¶)基团可以很容易地通过离子交联被多价离子交联，并且质子化的CMC- cooh基团可以在冷冻条件下形成氢键(Lin, Jin, Guo， & Jia, 2021)。
+
+​		Chen等人报道了一种由Al3+诱导的离子交联构建的可愈合的cmc基水凝胶(Zheng, Gao, Wei, Zhou， & Chen, 2015)。
+
+​		此外，通过顺序交联和酸辅助冷冻等策略制备了超韧CMC水凝胶(Li, Chen, Lin， & Ding, 2021;Zheng et al, 2015)。虽然已经实现了高韧性和自愈能力，但电导率低阻碍了其在高性能电化学器件中的应用。
+
+​		根据增强电导率的原理，**电解质中充足的离子**是实现高离子电导率的基础(Shao, Chang, Wang, Xu， & Yang, 2017)。虽然离子配位交联是制备凝胶基质的一种实用方法，但凝胶中固定离子的导电性较弱，无法作为有效的导电载体(Shao et al .， 2021;Shen et al .， 2020)。
+
+
+
+**我们制造的优点：**
+
+​		在此，我们报道了一种新型的超韧性、自愈性和可降解的全cmc准固态水凝胶超级电容器。
+
+​		采用氢离子辅助冷冻法，用氢键交联CMC。<u>**然后，我们*将水凝胶浸泡在二价离子溶液中，以产生强大的离子交联网络，并通过基质中吸收的自由离子触发水凝胶的传导*。**</u>所制得的双物理交联(DP) CMC水凝胶具有文献报道的最高的CMC水凝胶抗压强度。此外，所制备的对称超级电容器经活性炭涂层和集流器连接后，表现出较高的电化学性能。
+
+
+
+
+
+
+
 ## 二、Tough and self-healable double-network hydrogel for environmentally resistant all-in-one supercapacitors and strain sensors 
 
 ---
