--- a/学习路线.md
+++ b/学习路线.md
@@ -1,10 +1,411 @@
-#### C、数据结构、操作系统、计网
+C、数据结构、操作系统、计网
 
-#### Linux、ARM
+Linux、ARM
 
-#### QT、C++
+QT、C++
 
-#### 驱动开发与系统移植
+驱动开发与系统移植
 
-###  内核开发*
+内核开发
 
+👌🫡✔️👍💪🤙👍🤜🤛✍️🥇🏆🥈🥉🔍🔎✏️🖋️✒️🖊️🖌️📝❗❓💯🕜🕑
+
+### 一、编程基础
+
+#### 1、编程语言
+
+###### C语言✍️✍️
+基础：关键字/常量/变量、数据类型、输入/输出/格式化、运算符、表达式、语句、判断、循环、数组
+结构体/共同体/枚举/位操作
+函数
+指针! ! !
+内存管理! ! !
+
+
+
+###### C++🥇🥇
+面向对象特性：抽象、类、封装、继承、多态
+容器
+模板
+泛型
+STL
+RTTI
+元编程
+
+#### 2、数据结构和算法
+
+###### 数据结构✍️✍️
+字符串
+数组
+链表
+堆
+栈
+队列
+树
+哈希
+图
+
+###### 算法
+查找
+排序
+
+
+
+#### 3、操作系统🕜🕜
+
+内存管理和调度
+多任务：多线程/井发/锁
+I/O原理
+文件管理
+
+
+#### 4、计算机网络🕜🕜
+
+TCP/IP协议栈和分层
+ARP协议
+IP协议/ICMP协议
+TCP协议/UDP协议
+DNS协议/HTTP协议/HTTPS协议
+
+
+
+#### 5、单片机/微机/计组原理
+
+计算机的基本组成
+指令和运算
+处理器架构和设计
+存储系统
+I/O系统
+
+
+
+#### 5、Linux
+
+##### 1）Linux系统基本使用✔️✔️
+系统概念和特点
+Linux环境安装和搭建
+目录结构
+基本命令和常用工具
+基本网络管理
+基本系统管理
+基本的Shell编程
+
+
+
+##### 2）Linux平台的C/C+ +开发流程
+编辑：Vim、Emacs
+编译：
+
+​		1、编译套件：gcc
+​		2、编译工具：make、makefile、cmake/autotools等
+​		3、交叉编译工具
+调试：gdb 
+运行
+
+
+##### 3）Linux系统平台编程(下文会详述)
+系统控制
+内存管理和使用
+多任务编程
+文件I/O编程
+网络编程
+图形化界面编程
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+### 二、ARM
+
+#### 1、体系结构
+
+概念和体系结构
+工作模式
+指令集
+寻址方式
+寄存器
+内存管理单元
+常见接口和控制器
+通用编程模型
+
+#### 2、嵌入式裸机
+
+###### 典型电路
+GPIO
+相关寄存器
+工作模式
+
+###### 中断
+工作模式/中断体系
+中断向量表
+优先级、嵌套
+中断处理流程
+中断控制器
+主要寄存器操作
+外部中断
+
+###### 定时器
+时钟体系和结构
+关键寄存器控制
+PMW定时器
+看门]狗定时器
+实时时钟RTC
+
+###### 存储器
+Flash
+SD/TF
+
+###### 协议/接口/总线等概念
+UART
+IIC
+SPI
+IIS
+USB
+CAN
+LIN
+TCP/IP
+
+###### 无线模块
+蓝牙
+WiFi
+ZigBee
+RF
+
+###### 传感器
+温度
+湿度
+光敏
+压力
+触摸感应
+红外
+多轴传感器
+GPS
+
+###### AD转换
+工作原理
+参数指标
+寄存器操作
+
+###### 显示模块
+LCD
+触摸屏
+
+
+
+
+
+
+
+### 三、应用层开发
+
+#### 1、内存管理/使用
+
+内存分配、内存管理
+
+#### 2、多任务编程✔️✔️
+###### 进程
+进程概念和基础
+进程控制：创建、等待、退出
+守护进程：守护进程的编写、错误处理
+进程间通信：管道通信、消息队列、信号、信号量、共享内存、socket通信
+
+###### 线程
+线程的概念和基础
+线程控制和编程：属性、创建、等待、退出、清除、同步、优先级
+
+#### 3、文件I/O编程✔️✔️
+文件/文件描述符
+文件指针/文件流
+缓冲
+流操作:开/闭/读/写/内容定位等
+标准I/O流
+标准I/O操作
+非阻塞I/O
+异步I/O
+多路复用
+
+
+#### 4、网络编程✔️✔️
+TCP/IP协议家族
+Socket通信和应用
+TCP编程
+UDP编程
+
+#### 5、图形化界面编程🥇🥇
+###### Qt库：
+Q开发基础
+对话框/窗口
+信号与槽
+组件/控件/布局/事件
+绘图
+文件操作
+定时器
+多线程
+网络通信
+
+
+
+
+
+
+
+### 四、底层开发
+
+#### 1、可运行系统
+
+###### BootLoader
+Bootloader基础：概念、作用、工作流程、常见命令
+Bootloader裁剪和移植
+Bootloader启动流程和原理
+
+###### Linux内核
+linux内核源码结构/组成
+linux内核配置/编译/调试/裁剪/移植
+内核启动流程分析和理解
+
+
+###### 根文件系统
+根文件系统构建
+文件系统移植
+
+
+
+#### 2、Linux内核编程
+
+###### 内核重要机制/概念(基础设施)
+内存寻址和管理
+并发与竞态
+原子操作
+自旋锁
+同步
+互斥
+信号量
+内核中断
+异常处理
+内核定时器原理
+内核同步原理
+异步通知和异步I/O
+阻塞和非阻塞I/O
+
+###### 内存寻址和管理
+内存管理的基本框架和原理
+段/页/区以及操作
+内存映射
+slab层原理和接口
+内存池
+进程地址空间原理
+
+
+
+###### 进程
+进程描述符及任务结构
+进程控制实践和原理
+进程调度策略和算法
+内核锁机制
+进程间通信
+
+
+
+###### 内核同步原理
+临界区和竞争条件
+死锁原理
+内核同步访问
+
+###### 并发与竞争
+原子操作
+屏障
+自旋锁
+读写锁
+信号量
+互斥体
+
+
+
+###### 定时器
+定时器类型
+普通定时器实现
+高精定时器实现
+动态时钟
+时钟中断处理
+延迟执行
+
+
+
+###### 中断
+中断概念/作用/类型/体系/框架
+机制原理和实现
+中断处理流程和架构
+中断上下文
+中断控制
+硬/软中断
+中断系统重要数据结构
+
+
+
+###### 文件系统
+通用文件模型和接口
+相关数据结构
+文件系统类型
+文件系统内部处理
+系统调用原理和实现
+
+###### 网络通信
+TCP/IP协议栈原理
+网络分层
+网络层通信
+传输层通信
+套接字通信
+缓冲区
+
+###### 设备驱动程序
+见下一节
+
+
+
+#### 3、Linux驱动开发
+
+###### 设备驱动核心理论知识
+见上一部分内核重要机制
+
+###### 字符设备驱动
+字符设备驱动结构和框架
+关键数据结构
+相关调用流程
+扩展操作
+
+###### 块设备驱动
+块设备驱动基本框架
+主要数据结构
+块设备的处理和操作
+通用块层
+I/O调度程序
+
+###### 网络设备驱动
+网络设备工作原理
+网络设备驱动框架
+核心数据结构和函数
+收/发/处理数据
+中断处理
+
+###### 总线设备驱动
+串口设备驱动
+IIC设备驱动
+SPI设备驱动
+IIS设备驱动
+PCI设备驱动
+USB设备驱动
